[package]
name = "quiver"
edition = "2021"
version = "0.1.0"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41" }
anyhow = { version = "1.0.75" }
rustls = { version = "0.23" }
quinn = { version = "0.11" }
bincode = { version = "1.3.3" }
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
bytes = { version = "1.10.1" }

# nockchain
nockchain-libp2p-io = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "nockchain-libp2p-io" }
nockapp = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "nockapp" }